# SPECFEMPP

./: .buildinfo  .gitignore  CMakeLists.txt  _formulas.tex  _formulas_dark.tex  annotated.html  classes.html  classspecfem_1_1_domain_1_1_domain-members.html  classspecfem_1_1_domain_1_1_domain.html  classspecfem_1_1_domain_1_1_elastic-members.html  classspecfem_1_1_domain_1_1_elastic.html  classspecfem_1_1_m_p_i_1_1_m_p_i-members.html  classspecfem_1_1_m_p_i_1_1_m_p_i.html  classspecfem_1_1_time_scheme_1_1_newmark-members.html  classspecfem_1_1_time_scheme_1_1_newmark.html  classspecfem_1_1_time_scheme_1_1_time_scheme-members.html  classspecfem_1_1_time_scheme_1_1_time_scheme.html  classspecfem_1_1coupled__interface_1_1coupled__interface-members.html  classspecfem_1_1coupled__interface_1_1coupled__interface.html  classspecfem_1_1coupled__interface_1_1impl_1_1edges_1_1edge.html  classspecfem_1_1coupled__interface_1_1impl_1_1edges_1_1edge_3_01specfem_1_1domain_1_1domain_3_0177cc8bc94137c50f617acb9fa9e77f60.html  classspecfem_1_1coupled__interface_1_1impl_1_1edges_1_1edge_3_01specfem_1_1domain_1_1domain_3_018be4a3bda5a64da3447b2202fb494fdb.html  classspecfem_1_1coupled__interface_1_1impl_1_1edges_1_1edge_3_01specfem_1_1domain_1_1domain_3_0198c46dc01d4d426ff42bc98196b72676.html  classspecfem_1_1coupled__interface_1_1impl_1_1edges_1_1edge_3_01specfem_1_1domain_1_1domain_3_01a5770fcb8a38ff528ce59f19f399676d.html  classspecfem_1_1domain_1_1domain-members.html  classspecfem_1_1domain_1_1domain.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensi36e6941ac771dc3ca0fd5bf598c2bf2b.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensi49fff028879d572ac5f155bb8eb1b2b0.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensi5b312db30ee04b0c26ee8764858c88bc.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensi5eef18aab9820d896bbf1e8bbf156db9.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensi6509ccbcb95fc1ef233043a3d35ab865.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensie1d7ca002ecbb22a6a5154d0ed7d458b.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensif3f766936904e673e95714289de39f74.html  classspecfem_1_1domain_1_1impl_1_1elements_1_1element_3_01specfem_1_1enums_1_1element_1_1dimensif8cc5fdb89c79313f157a82f9aa152d7.html  classspecfem_1_1domain_1_1impl_1_1kernels_1_1kernels-members.html  classspecfem_1_1domain_1_1impl_1_1kernels_1_1kernels.html  classspecfem_1_1domain_1_1impl_1_1receivers_1_1receiver.html  classspecfem_1_1domain_1_1impl_1_1receivers_1_1receiver_3_01specfem_1_1enums_1_1element_1_1dimen0a06dd08ad6323ea3b0a70cac1dbe85f.html  classspecfem_1_1domain_1_1impl_1_1receivers_1_1receiver_3_01specfem_1_1enums_1_1element_1_1dimen35a67f6e33083db86f94095f7043a87f.html  (+293 more)
workflow_int_ptr_ptr/: .gitignore  (+6 more)
(+625 files in other folders)
