[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow"
version = "0.1.0"
description = "Automatic scripts to work with SFPP"
requires-python = ">=3.10"
dependencies = ["numpy","matplotlib","ruff", "nox", "pyyaml"]

[project.optional-dependencies]
qt = [
  "pyqt6",
]


[tool.hatch.build.targets.sdist]
packages=["workflow"]

[tool.hatch.build.targets.wheel]
packages=["workflow"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
